--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "npx eslint . && npx stylelint \"**/*.{css,scss}\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
