--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,17 +12,35 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["airbnb", "plugin:react/recommended"],
-  "plugins": ["react"],
+  "extends": [
+    "airbnb",
+    "plugin:react/recommended"
+  ],
+  "plugins": [
+    "react"
+  ],
   "rules": {
-    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [
+      "warn",
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off",
     "no-param-reassign": [
-      "error", { "props": true, "ignorePropertyModificationsFor": [
-        "state"
-      ] }]
+      "error",
+      {
+        "props": true,
+        "ignorePropertyModificationsFor": [
+          "state"
+        ]
+      }
+    ]
     //Following the official documentation by redux toolkit - we need this rule - https://redux-toolkit.js.org/usage/immer-reducers#linting-state-mutations
   },
   "ignorePatterns": [
