--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -14,7 +14,9 @@
         "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
       }
     ],
-    "csstree/validator": true
+    "csstree/validator": true,
+    "linebreak-style": 0,
+    "react/require-default-props": "off"
   },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
 }
