--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -14,9 +14,7 @@
         "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
       }
     ],
-    "csstree/validator": true,
-    "linebreak-style": 0,
-    "react/require-default-props": "off"
+    "csstree/validator": true
   },
   "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
 }
