--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "react"
   ],
   "rules": {
+    "jsx-a11y/label-has-for": 0,
     "react/require-default-props": "off",
     "linebreak-style": 0,
     "react/jsx-filename-extension": [
